@@ -3,6 +3,7 @@ v0.5 (...)
 	-Added the following new functions:
 		(boundary) hfssAssignImpedance(...) (thanks Rounak Singh Narde).
 		(boundary) hfssEditFloquetPort(...)
+		(analysis) hfssSweepAnalysis(...)
 		(general)  hfssSetVariable(...) (thanks Rounak Singh Narde).
 		(general)  hfssAssignSizeVariable(...)
 		(general)  hfssAssignPositionVariable(...)
